# keepalive

./: .dockerignore  .gitignore  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: infra.rs  lib.rs  main.rs  presentation.rs
api/src/core/: component_group.rs
api/src/infra/: db.rs
api/src/infra/stores/: component_group.rs
api/src/presentation/: docs.rs  error.rs
api/src/presentation/routers/: component_groups.rs
api/tests/: component_groups.rs  helpers.rs
backend/api/: Cargo.toml  Dockerfile
backend/api/src/: application.rs  lib.rs  presentation.rs
backend/api/src/application/: component_group.rs  error.rs  validation.rs
backend/api/src/core/: component_group.rs
backend/api/src/infra/: stores.rs
backend/api/src/infra/stores/: component_group.rs
backend/api/src/presentation/: docs.rs  error.rs  routers.rs
backend/api/src/presentation/routers/: v1.rs
backend/api/src/presentation/routers/v1/: component_groups.rs
backend/api/tests/: component_groups.rs  helpers.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20260606_000001_create_component_groups.rs
frontend/: index.html
migration/src/: lib.rs
