[package]
name = "keepalive-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum        = "0.8"
tokio       = { version = "1", features = ["full"] }
sea-orm     = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
migration   = { path = "../migration" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror   = "2"
