[package]
name = "keepalive-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum        = "0.8"
tokio       = { version = "1", features = ["full"] }
sea-orm     = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
migration   = { path = "../migration" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror    = "2"
utoipa = { version = "5", features = ["uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
tower                  = { version = "0.5", features = ["util"] }
http-body-util         = "0.1"
tokio                  = { version = "1", features = ["full"] }
