[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio             = { version = "1", features = ["full"] }
